--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,10 +1,3 @@
-body {
-    margin: 0;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-}
-
-.root-container {
-    height: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
