--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    @apply my-4 text-2xl;
+}
+
+h1 + p {
+    @apply my-3;
+}
